Criado método para filtrar contas por data.
