# public/openapi/openapi.json
@@ -369,6 +369,61 @@
                 ]
             }
         },
+        "/bill/account/{accountId}/between/{startDate}/{endDate}": {
+            "get": {
+                "tags": [
+                    "Bills"
+                ],
+                "summary": "Uma lista de contas a pagar/receber",
+                "description": "Uma lista de contas a pagar/receber da conta informada",
+                "operationId": "35a3484af72078654b42df4e5743b90e",
+                "parameters": [
+                    {
+                        "name": "accountId",
+                        "in": "path",
+                        "description": "Id da conta",
+                        "required": true,
+                        "style": "form",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "startDate",
+                        "in": "path",
+                        "description": "Data do início do intervalo",
+                        "required": true,
+                        "style": "form",
+                        "schema": {
+                            "type": "date"
+                        }
+                    },
+                    {
+                        "name": "endDate",
+                        "in": "path",
+                        "description": "Data de término do intervalo",
+                        "required": true,
+                        "style": "form",
+                        "schema": {
+                            "type": "date"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Uma lista de contas a pagar/receber"
+                    },
+                    "404": {
+                        "description": "Conta não encontrada"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/bill/{id}": {
             "get": {
                 "tags": [
@@ -995,10 +1050,10 @@
         "/invoice/pay/{invoiceId}": {
             "patch": {
                 "tags": [
-                    "Invoice"
+                    "Invoices"
                 ],
-                "summary": "Uma lista de contas a pagar/receber",
-                "description": "Uma lista de contas a pagar/receber da conta informada",
+                "summary": "Marca uma fatura como paga",
+                "description": "Marca uma fatura de cartão de crédito como paga.",
                 "operationId": "e307e5ed1e564f72b0af1c62b5a104c1",
                 "parameters": [
                     {
